--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
+  dio: ^5.4.1
+  flutter_bloc: ^8.1.4
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
 
@@ -22,6 +24,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  pretty_dio_logger: ^1.3.1
 
 # The following section is specific to Flutter packages.
 flutter:
