--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
+  equatable: ^2.0.5
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
