--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   shared_preferences: ^2.2.2
   equatable: ^2.0.5
   fpdart: ^1.1.0
+  intl: ^0.19.0
+  number_to_words_english: ^2.0.2
 
 dev_dependencies:
   flutter_test:
