--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   fpdart: ^1.1.0
   intl: ^0.19.0
   number_to_words_english: ^2.0.2
-
+  flutter_rating_bar: ^4.0.1
+  video_player: ^2.2.14
+  chewie: ^1.7.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
