--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.2.2
   equatable: ^2.0.5
   fpdart: ^1.1.0
+  rxdart: ^0.27.7
   intl: ^0.19.0
   number_to_words_english: ^2.0.2
 
